--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
+jwt.secret=${JWT_SECRET}
 
 #trace security filter chain
 logging.level.org.springframework.security=DEBUG 
